--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yargs": "^4.7.1"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
