--- a/package.json
+++ b/package.json
@@ -15,15 +15,42 @@
   "main": "dist/nextjs-ssr.js",
   "license": "MIT",
   "devDependencies": {
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-size": "^2.1.0",
-    "gulp-uglify": "^2.1.2",
-    "yargs": "^4.7.1"
+    "autoprefixer": "6.7.6",
+    "babel-plugin-module-resolver": "2.5.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "glob": "7.1.1",
+    "normalize.css": "5.0.0",
+    "postcss-easy-import": "2.0.0",
+    "postcss-loader": "1.3.3",
+    "url-loader": "^0.5.9",
+    "babel-plugin-wrap-in-js": "^1.1.1",
+    "body-parser": "^1.15.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "isomorphic-fetch": "^2.2.1",
+    "lusca": "^1.4.1",
+    "next": "^2.4.1",
+    "next-redux-wrapper": "^1.1.2",
+    "node-sass": "^4.5.0",
+    "nodemailer": "^2.7.0",
+    "now-logs": "0.0.7",
+    "orm": "^3.2.3",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "raw-loader": "^0.5.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "sass-loader": "^5.0.1",
+    "session-file-store": "^1.0.0",
+    "sqlite3": "^3.1.8",
+    "uuid": "^3.0.1"
   },
   "dependencies": {
     "isomorphic-unfetch": "^2.0.0",
